# openiothub_gateway_service

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/iotserv/appid/openiothub_gateway_service_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: openiothub_gateway_service.podspec
lib/: openiothub_gateway_service.dart  openiothub_gateway_service_bindings_generated.dart
linux/: CMakeLists.txt
macos/: openiothub_gateway_service.podspec
macos/Classes/: openiothub_gateway_service.c
src/: CMakeLists.txt  openiothub_gateway_service.c
windows/: CMakeLists.txt
